--- a/src/pages/common/login/login.html
+++ b/src/pages/common/login/login.html
@@ -31,6 +31,9 @@
                 <span id="mensaje-contraseña" style="font-size: 0.9em; font-weight: bold;"></span>
 
                 <button type="submit">Enviar</button>
+                <br>
+                <br>
+                <button type="button" id="btnEntrar" class="btn entrar-btn">Entrar</button>
                 <div id="mensaje-exito" style="margin-top: 10px; font-weight: bold; color: green;"></div>
             </div>
         </form>
