--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>HomeworkClick App</title>
-    <script>
-        // Redirige automáticamente a la ruta /login
-        window.location.replace("/login");
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homeworkclick Login</title>
 </head>
 <body>
-    <!-- El usuario será redirigido automáticamente al login -->
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
+
