correcciones y colocacion nombre de usuario en chat

--- a/src/pages/chatbot/chatbot.html
+++ b/src/pages/chatbot/chatbot.html
@@ -13,9 +13,7 @@
             </div>
         </div>
         <div class="chat-actions">
-            <button id="configBtn" class="btn-icon" title="Configurar API Key" aria-label="Configurar API Key">
-                ⚙️
-            </button>
+            <!-- Botón de configuración eliminado -->
             <button id="changeUserBtn" class="btn-icon" title="Cambiar usuario" aria-label="Cambiar usuario">
                 👤
             </button>
