--- a/src/pages/chatbot/chatbot.html
+++ b/src/pages/chatbot/chatbot.html
@@ -1,5 +1,5 @@
-<img src="/src/assets/images/imagen1.png" alt="" class="bg-side bg-left" aria-hidden="true">
-<img src="/src/assets/images/imagen3.png" alt="" class="bg-side bg-right" aria-hidden="true">
+<img src="../../assets/images/imagen1.png" alt="" class="bg-side bg-left" aria-hidden="true">
+<img src="../../assets/images/imagen3.png" alt="" class="bg-side bg-right" aria-hidden="true">
 
 <div id="toast" class="toast" aria-live="polite"></div>
 
