--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,48 +24,5 @@
             </div>
         </form>
     </div>
-    <img src="/src/assets/images/imagen2.png" alt="Mi Imagen" class="logo">
-</div>
-
-<div class="card" id="card-registro" style="display: none;">
-    <div class="caja register-form">
-        <div class="login">
-            <h1>REGISTRO</h1>
-        </div>
-        <form id="form-registro">
-            <div class="imput imput-r">
-                <div class="izq">
-                    <label for="nombre">Nombres:</label>
-                    <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre" required>
-
-                    <label for="apellido">Apellidos:</label>
-                    <input type="text" id="apellido" name="apellido" placeholder="Ingrese su apellido" required>
-
-                    <label for="correo">Correo:</label>
-                    <input type="email" id="correo-reg" name="correo" placeholder="Ingrese su correo" required>
-
-                    <label for="contraseña">Contraseña:</label>
-                    <input type="password" id="contraseña-reg" name="contraseña" placeholder="Mínimo 8 caracteres." required>
-                    <div id="fuerza-contraseña-registro" style="height: 10px; border-radius: 5px; margin-bottom: 5px;"></div>
-                    <span id="mensaje-contraseña-registro" style="font-size: 0.9em; font-weight: bold;"></span>
-
-                    <label for="confirmar-contraseña">Confirmar Contraseña:</label>
-                    <input type="password" id="confirmar-contraseña" name="confirmar-contraseña" placeholder="Mínimo 8 caracteres." required>
-                </div>
-                <div class="registro">
-                    <label for="direccion">Dirección:</label>
-                    <input type="text" id="direccion" name="direccion" placeholder="Ingrese su dirección" required>
-
-                    <label for="telefono">Teléfono:</label>
-                    <input type="text" id="telefono" name="telefono" placeholder="Ingrese su teléfono" required>
-
-                    <div class="botones">
-                        <button type="submit">Registrarse</button>
-                        <button type="button" id="btn-volver-login">Volver al Login</button>
-                    </div>
-                    <div id="mensaje-exito-registro" style="margin-top: 10px; font-weight: bold; color: green;"></div>
-                </div>
-            </div>
-        </form>
-    </div>
+    <img src="/src/assets/images/imagen2.png" alt="Mi Imagen" class="logo" loading="lazy">
 </div>
