--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Homeworkclick Login</title>
 </head>
 <body>
+    <header id="appHeader" class="app-header">
+      <div id="appMenu"></div>
+    </header>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
