--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,6 +13,13 @@
                 <input type="password" id="contraseña" name="contraseña" placeholder="Mínimo 8 caracteres." required>
                 <div id="fuerza-contraseña" style="height: 10px; border-radius: 5px; margin-bottom: 5px;"></div>
                 <span id="mensaje-contraseña" style="font-size: 0.9em; font-weight: bold;"></span>
+                <label>
+                    Rol
+                    <select id="role" required>
+                    <option value="user">Usuario</option>
+                    <option value="admin">Administrador</option>
+                    </select>
+                </label>
                 <a href="#">¿Olvidaste tu contraseña?</a>
 
                 <div class="botones">
@@ -58,6 +65,13 @@
 
                     <label for="telefono">Teléfono:</label>
                     <input type="text" id="telefono" name="telefono" placeholder="Ingrese su teléfono" required>
+
+                    <label for="rol">Rol:</label>
+                    <select id="rol" name="rol" required>
+                        <option value="" disabled selected>Seleccione un rol</option>
+                        <option value="usuario">Usuario</option>
+                        <option value="administrador">Administrador</option>
+                        </select>
 
                     <div class="botones">
                         <button type="submit">Registrarse</button>
